examples/test/testpolicy5157.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5157
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key16: value19
      key31: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value22
          key10: value39
          key37: value24
      podSelector:
        matchLabels:
          key12: value30
